# piggery

./: .gitignore  LICENSE  README.md  meson.build  notes.txt
include/: account.hpp  category.hpp  meson.build  piggery.hpp  piggybank.hpp
sql/: createTables.sh  createTables.sql  fillTables.sh  fillTables.sql
src/: account.cpp  category.cpp  main.cpp  meson.build  piggery.cpp  piggybank.cpp
test/: main_test.cpp  meson.build
